--- a/hom-viewer/src/assets/styles/main.styl
+++ b/hom-viewer/src/assets/styles/main.styl
@@ -27,6 +27,7 @@ body::-webkit-scrollbar-thumb
   background $hom-grey3
 
 table
+  table-layout fixed
   border-radius .5rem
   overflow hidden
   background-color #F7F7F7
@@ -39,6 +40,7 @@ table
       font-family menlo, 'Courier New', Courier, monospace
       font-size 0.9em
       text-align center
+      width 10rem
     &:first-child, &:last-child
       padding-left 1rem
       padding-right 1rem
@@ -46,6 +48,11 @@ table
     background-color rgba(0,0,0,0.05)
     padding-top 1rem
     padding-bottom 1rem
+    min-width 4rem
+    &.small
+      width 5rem
+    &.medium
+      width 8rem
 
   tr:nth-child(2) > td
     padding-top .5rem
@@ -57,18 +64,21 @@ section
   padding 0 2rem
   max-width 64rem
 
-
 .stats
   display flex
   flex-wrap wrap
   justify-content center
-  border-radius .5rem
   margin .5rem 0
   .stat
     text-align center
-    margin 1rem
-    flex 1
-    min-width 8rem
+    margin .5rem
+    padding 1.5rem
+    width 12rem
+    background linear-gradient(144.55deg, rgba(41, 202, 164, 0.1) 0%, rgba(41, 202, 65, 0.03) 100%)
+    border-radius .5rem
+    display flex
+    flex-direction column
+    justify-content center
     h2
       font-size 3rem
       font-weight 700
@@ -81,9 +91,39 @@ section
     h3
       font-weight 700
     p
+      font-size 0.9rem
       font-weight 500
       opacity .8
 
+.miniStats
+  display flex
+  flex-wrap wrap
+  justify-content center
+  .stat
+    flex 1
+    display flex
+    flex-wrap wrap
+    padding 1rem
+    margin .5rem
+    border-radius .5rem
+    background linear-gradient(144.55deg, rgba(41, 202, 164, 0.1) 0%, rgba(41, 202, 65, 0.03) 100%)
+    h2
+      font-size 2rem
+      flex-shrink 0
+      font-weight 700
+      margin-right 1rem
+      background $hom-gradient1
+      -webkit-background-clip text
+      -webkit-text-fill-color transparent
+    h3, p
+      margin-top .4rem
+      line-height 1.2
+    h3
+      font-weight 700
+    p
+      font-size 0.9rem
+      font-weight 500
+      opacity .8
 hr
   border none
   border-top 2px solid $hom-grey2
