:sparkles: Added adult-content warning to viewer

--- a/hom-viewer/src/assets/styles/main.styl
+++ b/hom-viewer/src/assets/styles/main.styl
@@ -63,6 +63,24 @@ section
   margin 2rem auto
   padding 0 2rem
   max-width 64rem
+  &.content-warn
+    background linear-gradient(111.72deg, #FFCE11 0%, #FFDE97 0.01%, #FFF0B5 100%)
+    border-radius .5rem
+    padding 2rem
+    box-sizing border-box
+    display flex
+    div:first-child
+      margin-right 1rem
+    p
+      font-size 1.2rem
+      line-height 1.2
+    h2
+      font-size 2rem
+      font-weight 700
+      margin-bottom 0.5rem
+    video
+      max-width 100%
+      border-radius .5rem
 
 .stats
   display flex
